# diffusion2d

./: .gitignore  README.md  pyproject.toml
jelitaw_diffusion2d/: diffusion2d.py  output.py
